# dargs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  README.md  checker.py  dargs.py  pyproject.toml  setup.py  test_checker.py  test_creation.py  test_docgen.py  test_normalization.py
.github/workflows/: python-publish.yml  test.yml  type-check.yml
dargs/: __init__.py  __main__.py  _test.py  check.py  cli.py  dargs.py  json_schema.py  notebook.py  sphinx.py
docs/: Makefile  cli.rst  conf.py  dpgui.rst  index.rst  json_schema.md  nb.ipynb  pre-commit.md  ref.md  requirements.txt  sphinx.rst
tests/: __init__.py  context.py  dpmdargs.py  test_arguments.json  test_checker.py  test_cli.py  test_creation.py  test_docgen.py  test_json_schema.py  test_normalization.py  test_normalizer.py  test_notebook.py  test_ref.py
