[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dargs"
dynamic = ["version"]
description = "Process arguments for the deep modeling project."
authors = [
    {name = "DeepModeling"},
    {name = "Yixiao Chen", email = "yixiaoc@princeton.edu"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "typeguard>=4",
    'typing_extensions; python_version < "3.8"',
]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/deepmodeling/dargs"
documentation = "https://docs.deepmodeling.com/projects/dargs"
repository = "https://github.com/deepmodeling/dargs"

[tool.setuptools.packages.find]
include = ["dargs*"]

[tool.setuptools_scm]
write_to = "dargs/_version.py"
