[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "dargs"
dynamic = ["version"]
description = "Process arguments for the deep modeling project."
authors = [
    {name = "DeepModeling"},
    {name = "Yixiao Chen", email = "yixiaoc@princeton.edu"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    "typeguard>=4",
    'typing_extensions; python_version < "3.8"',
]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/deepmodeling/dargs"
documentation = "https://docs.deepmodeling.com/projects/dargs"
repository = "https://github.com/deepmodeling/dargs"

[project.optional-dependencies]
test = [
    "ipython",
    "jsonschema",
]
typecheck = [
    "basedpyright==1.12.2",
    "sphinx",
    "ipython",
]

[project.scripts]
dargs = "dargs.cli:main"

[tool.setuptools.packages.find]
include = ["dargs*"]

[tool.setuptools_scm]
write_to = "dargs/_version.py"

[tool.ruff.lint]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "RUF", # ruff
    "I", # isort
    "TCH", # flake8-type-checking
    "B904", # raise-without-from-inside-except
]

ignore = [
    "E501", # line too long
    "F841", # local variable is assigned to but never used
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D100", # TODO: missing docstring in public module
    "D101", # TODO: missing docstring in public class
    "D102", # TODO: missing docstring in public method
    "D103", # TODO: missing docstring in public function
    "D104", # TODO: missing docstring in public package
    "D105", # TODO: missing docstring in magic method
    "D205", # 1 blank line required between summary line and description
    "D401", # TODO: first line should be in imperative mood
    "D404", # TODO: first word of the docstring should not be This
]
ignore-init-module-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
include = ["dargs"]
